--- a/SalesMvcAsp/appsettings.json
+++ b/SalesMvcAsp/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesMvcAspContext": "Server=(localdb)\\mssqllocaldb;Database=SalesMvcAspContext-040e0a6b-5e08-47a3-a27c-29f16ecd85f2;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
